user_layout, beginning of multiple subroutes, explore/expand user page, center weight on people

--- a/client/chat.jade
+++ b/client/chat.jade
@@ -18,8 +18,8 @@ template(name='chat_list')
         each chat_list_items
             +chat_list_item
     .ui.small.inline.header direct messages
-    .ui.icon.basic.button#create_chat(title='new channel')
-        i.plus.icon
+    //- .ui.icon.basic.button#create_private_chat(title='new dm')
+    //-     i.plus.icon
 
     .ui.segments
         each private_chats
