--- a/client/cal.jade
+++ b/client/cal.jade
@@ -10,3 +10,7 @@ template(name='cal')
             .dhx_cal_tab(name='month_tab', style='right:204px;')
         .dhx_cal_header
         .dhx_cal_data
+
+
+template(name='user_diagram')
+    #diagram_container
