--- a/client/client.jade
+++ b/client/client.jade
@@ -21,7 +21,7 @@ head
 
 
 template(name='layout')
-    //- img.ui.fluid.image.banner_image(src="{{c.url 'stars_big' width=1000 height=500 crop='crop'}}")
+    //- img.ui.fluid.image.banner_image(src="{{c.url 'stars_big' width=1000 height=cal500 crop='crop'}}")
     //- img.ui.fluid.image(src="{{c.url 'stars_big' width=2000}}")
     +nav
     //- if currentUser
